# freeture

./: .gitignore  .travis.yml  AcqSchedule.cpp  AcqThread.cpp  AcqThread.h  Base64.cpp  CameraGigeAravis.cpp  CameraGigeAravis.h  CameraGigeTis.cpp  CameraGigeTis.h  CameraV4l2.h  CameraVideo.cpp  CameraWindows.cpp  CfgParam.cpp  CfgParam.h  Conversion.cpp  Conversion.h  Detection.h  DetectionTemplate.cpp  DetectionTemporal.cpp  DetectionTemporal.h  ECamSdkType.h  EImgFormat.h  ELogSeverityLevel.h  EParser.cpp  ESmtpSecurity.h  EStackMeth.h  ETimeMode.h  Ephemeris.h  ExposureControl.h  Fits.cpp  Fits.h  Fits2D.cpp  Fits2D.h  Frame.cpp  Frame.h  Histogram.h  HistogramGray.h  HistogramRGB.cpp  INSTALL.in  (+26 more)
autotools/: Makefile.am  acx_cfitsio.m4  bootstrap.sh  configure.ac
cmake/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  config.h.in  freeture.cbp
cmake/Modules/: FindCFITSIO.cmake  FindGLIB2.cmake  FindGObject.cmake  FindGenICam.cmake  FindOpenSSL.cmake  FindPylon.cmake  FindTIS.cmake  Findaravis.cmake  LibFindMacros.cmake
data/: meteor5.flv
datatest/: meteor1.avi  meteor4.flv
doc/: Dockerfile  Makefile.am  Makefile.in  freeture.1.in  freeture.x
libs/VI/lib64/: videoInput.lib  videoInputD.lib
share/: configuration.cfg
src/: AcqRegular.cpp  AcqRegular.h  AcqSchedule.cpp  AcqSchedule.h  AcqThread.cpp  AcqThread.h  AstThread.cpp  AstThread.h  Base64.cpp  Base64.h  Camera.cpp  Camera.h  CameraBasler.cpp  CameraBasler.h  CameraDMK.cpp  CameraDMK.h  CameraFrames.cpp  CameraFrames.h  CameraGigeAravis.cpp  CameraGigeAravis.h  CameraGigePylon.cpp  CameraGigePylon.h  CameraGigeSdkAravis.cpp  CameraGigeSdkAravis.h  CameraGigeSdkIc.cpp  CameraGigeSdkIc.h  CameraGigeSdkPylon.cpp  CameraGigeSdkPylon.h  CameraGigeTis.cpp  CameraGigeTis.h  CameraSDK.cpp  CameraSDK.h  CameraSDKAravis.cpp  CameraSDKAravis.h  CameraSDKPylon.cpp  CameraSDKPylon.h  CameraSimu.cpp  CameraSimu.h  CameraV4l2.cpp  CameraV4l2.h  (+120 more)
