#
#				Makefile.am
#
# src Makefile.am. Process this file with automake to generate a Makefile
#%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
#*
#*	This file part of:	freeture
#*
#*	Copyright:		(C) 2014 Yoan Audureau, Chiara Marmo
#*                                                     FRIPON-GEOPS-UPSUD
#*
#*	License:		GNU General Public License
#*
#*	FreeTure is free software: you can redistribute it and/or modify
#*	it under the terms of the GNU General Public License as published by
#*	the Free Software Foundation, either version 3 of the License, or
#*	(at your option) any later version.
#*	FreeTure is distributed in the hope that it will be useful,
#*	but WITHOUT ANY WARRANTY; without even the implied warranty of
#*	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#*	GNU General Public License for more details.
#*	You should have received a copy of the GNU General Public License
#*	along with FreeTure. If not, see <http://www.gnu.org/licenses/>.
#*
#*	Last modified:		20/10/2014
#*
#*%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%*/

bin_PROGRAMS		= freeture
freeture_SOURCES	= EnumBitdepth.h ECamBitDepth.h ECamType.h EnumParser.h EnumParser.cpp \
			EDetMeth.h AstThread.h Base64.h CameraDMK.h Camera.h CameraBasler.h \
			CameraSimu.h CameraVideo.h FreeTure.h FreeTure.cpp \
			CameraSDK.h CameraSDKAravis.h CameraFrames.h \
			CameraSDKPylon.h SMTPClient.h ImgReduction.h \
			Configuration.h Conversion.h DetThread.h Fifo.h \
			Fits.h Fits2D.h Fits3D.h Frame.h GlobalEvent.h Histogram.h \
			ImgThread.h includes.h LocalEvent.h EAstStackMeth.h \
			PixelEvent.h RecEvent.h \
			TimeDate.h DetByLines.h DetByLists.h ManageFiles.h \
			RecThread.h SaveImg.h ImgReduction.cpp \
			AstThread.cpp Base64.cpp Camera.cpp CameraBasler.cpp \
			CameraFrames.cpp SMTPClient.cpp \
			CameraDMK.cpp CameraSimu.cpp \
			CameraSDK.cpp CameraSDKAravis.cpp CameraSDKPylon.cpp \
			CameraVideo.cpp Configuration.cpp Conversion.cpp \
			DetThread.cpp Fifo.cpp Fits.cpp Fits2D.cpp Fits3D.cpp \
			Frame.cpp GlobalEvent.cpp Histogram.cpp ImgThread.cpp \
			LocalEvent.cpp main.cpp PixelEvent.cpp \
			RecEvent.cpp TimeDate.cpp \
			DetByLines.cpp DetByLists.cpp ManageFiles.cpp \
			RecThread.cpp SaveImg.cpp EnumLog.h
			
DATE=`date +"%Y-%m-%d"`

