#
#				Makefile.am
#
# src Makefile.am. Process this file with automake to generate a Makefile
#%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
#*
#*	This file part of:	freeture
#*
#*	Copyright:		(C) 2014-2015 Yoan Audureau, Chiara Marmo
#*                              FRIPON-GEOPS-UPSUD-CNRS
#*
#*	License:		GNU General Public License
#*
#*	FreeTure is free software: you can redistribute it and/or modify
#*	it under the terms of the GNU General Public License as published by
#*	the Free Software Foundation, either version 3 of the License, or
#*	(at your option) any later version.
#*	FreeTure is distributed in the hope that it will be useful,
#*	but WITHOUT ANY WARRANTY; without even the implied warranty of
#*	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#*	GNU General Public License for more details.
#*	You should have received a copy of the GNU General Public License
#*	along with FreeTure. If not, see <http://www.gnu.org/licenses/>.
#*
#*	Last modified:		20/10/2014
#*
#*%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%*/

bin_PROGRAMS		= freeture
freeture_SOURCES	= EImgBitDepth.h EParser.h EParser.cpp ECamSdkType.h \
			EDetMeth.h Base64.h Camera.h AcqThread.h AcqThread.cpp \
			CameraVideo.h CameraGigeAravis.h CameraGigeAravis.cpp \
			CameraFrames.h CameraGigePylon.h CameraGigePylon.cpp CameraV4l2.cpp CameraV4l2.h \
			SMTPClient.h CameraGigeTis.h CameraGigeTis.cpp Circle.h CameraWindows.h CameraWindows.cpp \
			CfgLoader.h CfgParam.h Conversion.h DetThread.h Detection.h \
			Fits.h Fits2D.h Fits3D.h Frame.h GlobalEvent.h Histogram.h DetectionTemplate.h \
			LocalEvent.h EStackMeth.h DetectionTemplate.cpp DetectionTemporal.h DetectionTemporal.cpp \
			TimeDate.h Device.h Device.cpp Stack.h Stack.cpp Ephemeris.cpp SParam.h\
			SaveImg.h StackThread.h StackThread.cpp Mask.h Mask.cpp EInputDeviceType.h \
			Base64.cpp ESmtpSecurity.h OpenSSL.h OpenSSL.cpp Socket.h PixFmtConv.cpp \
			CameraFrames.cpp SMTPClient.cpp HistogramGray.h HistogramGray.cpp \
			CameraVideo.cpp CfgLoader.cpp CfgParam.cpp Conversion.cpp Ephemeris.h \
			DetThread.cpp Fits.cpp Fits2D.cpp Fits3D.cpp Logger.h PixFmtConv.h \
			Frame.cpp GlobalEvent.cpp Histogram.cpp \
			LocalEvent.cpp main.cpp HistogramRGB.h HistogramRGB.cpp EImgFormat.h \
			TimeDate.cpp ExposureControl.cpp ExposureControl.h ETimeMode.h ECamPixFmt.h \
			SaveImg.cpp ELogSeverityLevel.h ImgProcessing.cpp ImgProcessing.h

DATE=`date +"%Y-%m-%d"`

